<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".PdfDetailActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/form_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/book_details"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Book info -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/pdfRl"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="5dp"
                    android:background="@color/gray02">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/pdfView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/titleTv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pdfRl"
                    android:text="@string/title_of_book" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTv"
                    android:layout_toEndOf="@+id/pdfRl">

                    <TableRow>

                        <TextView
                            android:id="@+id/categoryLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/categoryTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/dateLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/date" />

                        <TextView
                            android:id="@+id/dateTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a2" />

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/sizeLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/size"/>

                        <TextView
                            android:id="@+id/sizeTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a3"/>

                    </TableRow>

                    <TableRow android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/viewsLabelTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/views" />

                        <TextView
                            android:id="@+id/viewsTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:text="@string/n_a4" />

                    </TableRow>

                </TableLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/the_description_of_the_book"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>